[touch:1042]add telbor calendar to parser

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -65,6 +65,7 @@
     \emph{IN, IND, INR} & India Calendar \\ \hline
     \emph{ID, IDN, IDR} & Indonesia Calendar \\ \hline
     \emph{IL, ISR, ILS} & Israel Calendar \\ \hline
+    \emph{Telbor} & Tel Aviv Inter-Bank Offered Rate Calendar \\ \hline
     \emph{IT, ITA} & Italy Calendar \\ \hline
     \emph{MX, MEX, MXN} & Mexico Calendar \\ \hline
     \emph{MY, MYS, MYR} & Malaysia Calendar \\ \hline
