--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -66,13 +66,15 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
   \label{tab:callput_specs}
 \end{table}
 
-\item PayoffType: Specifies a detailled payoff type for exotic options. Only applicable to specific trade types as
+\item PayoffType [Optional, except for trade types detailed below]: Specifies a detailled payoff type for exotic options. Only applicable to specific trade types as
   indicated in brackets:
 
   Allowable values:
   \begin{itemize}
   \item Accumulator, Decumulator (applies to trade type Accumulator only)
   \item TargetFull, TargetExact, TargetTruncated (applies to trade type TaRF only)
+  \item BestOfAssetOrCash, WorstOfAssetOrCash, MaxRainbow, MinRainbow (applies to trade type RainbowOption only)
+  \item Vanilla, Asian, AverageStrike, LookbackCall, LookbackPut (applies to trade type BasketOption only)
   \end{itemize}
 
 \item Style: The exercise style of the option. 
