put wrapped trades  allowable values in italics

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -71,11 +71,11 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
 
   Allowable values:
   \begin{itemize}
-  \item Accumulator, Decumulator (applies to trade types EquityAccumulator, FxAccumulator, CommodityAccumulator only)
-  \item TargetFull, TargetExact, TargetTruncated (applies to trade types EquityTaRF, FxTaRF, CommodityTaRF only)
-  \item BestOfAssetOrCash, WorstOfAssetOrCash, MaxRainbow, MinRainbow (applies to trade types EquityRainbowOption,
+  \item \emph{Accumulator, Decumulator} (applies to trade types EquityAccumulator, FxAccumulator, CommodityAccumulator only)
+  \item \emph{TargetFull, TargetExact, TargetTruncated} (applies to trade types EquityTaRF, FxTaRF, CommodityTaRF only)
+  \item \emph{BestOfAssetOrCash, WorstOfAssetOrCash, MaxRainbow, MinRainbow} (applies to trade types EquityRainbowOption,
     FxRainbowOption, CommodityRainbowOption only)
-  \item Vanilla, Asian, AverageStrike, LookbackCall, LookbackPut (applies to trade types EquityBasketOption,
+  \item \emph{Vanilla, Asian, AverageStrike, LookbackCall, LookbackPut} (applies to trade types EquityBasketOption,
     FxBasketOption, CommodityBasketOption only)
   \end{itemize}
 
