--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -1,7 +1,7 @@
 \subsubsection{Equity Option}
 
 The \lstinline!EquityOptionData!  node is the trade data container for the \emph{EquityOption} trade type.  Equity 
-options with exercise styles \emph{European} and \emph{American}. The \lstinline!EquityOptionData!  node includes one and 
+options with exercise styles \emph{European} and \emph{American} are supported. The \lstinline!EquityOptionData!  node includes one and 
 only one \lstinline!OptionData! trade component sub-node plus elements specific to the equity option. The structure of 
 an example \lstinline!EquityOptionData! node for an equity option is shown in Listing
 \ref{lst:eqoption_data}.
@@ -27,7 +27,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityOption
 
 \begin{itemize}
 	\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note 
-	that the equity option type allows for \emph{European} option style only.	
+	that the equity option type allows for \emph{European} and \emph{American} option style.	
 	\item Name: The identifier of the underlying equity or equity index. \\
 	Allowable values:  See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 	\item Currency: The currency of the equity option. \\
