--- a/Docs/UserGuide/tradedata/bond.tex
+++ b/Docs/UserGuide/tradedata/bond.tex
@@ -12,7 +12,7 @@ are
 %via the default curves block in {\tt  todaysmarket.xml}
 % \item LGD (optional): If given, this LGD is used for pricing, overriding the default LGD of the default curve
 \item SecurityId: A unique identifier for the security, this defines the security specific spread to be used for pricing.
-\item ReferenceCurveId: The benchmark curve to be used for pricing, this must match a name of a yield curve in the market data configuration.
+\item ReferenceCurveId: The benchmark curve to be used for pricing, this must match a name of a yield curve or an index curve in the market data configuration.
 \item SettlementDays: The settlement delay applicable to the security.
 \item Calendar: The calendar associated to the settlement lag.
 \item IssueDate: The issue date of the security.
