ticket 1063: calendar added for spain, luxembourg, belgium

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -84,6 +84,9 @@
     \emph{TH, THA, THB} & Thailand Calendar \\ \hline
     \emph{TR, TUR, TRY} & Turkey Calendar \\ \hline
     \emph{UA, UKR, UAH} & Ukraine Calendar \\ \hline
+    \emph{BE, BEL, BEF, BEBR} & Belgium Calendar \\ \hline
+    \emph{LU, LUX, LUF} & Luxembourg Calendar \\ \hline
+    \emph{ES, ESP} & Spain Calendar \\ \hline
     \emph{BVMF} & Brazil Bovespa Calendar \\ \hline
     \emph{XTSE} & Canada Toronto Stock Exchange Calendar \\ \hline
     \emph{XSHG} & China Shanghai Stock Exchange Calendar \\ \hline
