added spain calendar, extended qle calendar test

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -87,6 +87,7 @@
     \emph{BE, BEL, BEF, BEBR} & Belgium Calendar \\ \hline
     \emph{LU, LUX, LUF} & Luxembourg Calendar \\ \hline
     \emph{ES, ESP} & Spain Calendar \\ \hline
+    \emph{AT, AUT, ATS} & Austria Calendar \\ \hline
     \emph{BVMF} & Brazil Bovespa Calendar \\ \hline
     \emph{XTSE} & Canada Toronto Stock Exchange Calendar \\ \hline
     \emph{XSHG} & China Shanghai Stock Exchange Calendar \\ \hline
