added ref to allowable values for cpi index

--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -12,7 +12,7 @@ elements:
 \begin{itemize}
 \item Index: The underlying zero inflation index.
 
-Allowable values:  Any string (provided it is the ID of an inflation index in the market configuration).
+Allowable values:  See \lstinline!Inflation CPI Index! in Table \ref{tab:cpiindex_data}.
 \item Rates: The fixed real rate(s) of the leg. As usual, this can be a single value, a vector of values or a dated vector of
   values.
  
