allow large joint calendar

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -130,8 +130,7 @@
     % \emph{LNB\_NYB\_TRB} & UK, US and Canada Calendar \\ \hline 
     % \emph{LNB\_NYB\_TKB} & UK, US and Japan Calendar \\ \hline   
     % \emph{NullCalendar} & Null Calendar, i.e. all days are business days \\ \hline                 
-  \caption{Allowable Values for Calendar. Combinations of up to four
-    calendars can be provided using comma separated calendar names.}
+  \caption{Allowable Values for Calendar. Combinations of calendars can be provided using comma separated calendar names.}
   \label{tab:calendar}
 \end{longtable}
 
