settlementmethod for callableswaps as well

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -99,7 +99,7 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
 
   Allowable values: \emph{Cash} or \emph{Physical}
 
-\item SettlementMethod [Optional]: Specifies the method to calculate the settlement amount for swaptions.
+\item SettlementMethod [Optional]: Specifies the method to calculate the settlement amount for Swaptions and CallableSwaps.
 
   Allowable values: \emph{PhysicalOTC}, \emph{PhysicalCleared}, \emph{CollateralizedCashPrice},\\ \emph{ParYieldCurve}. 
   
