--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -144,6 +144,7 @@
     \hline
     \emph{A360, Actual/360, ACT/360}& Actual 360  \\ \hline
     \emph{A365, A365F, Actual/365, Actual/365 (fixed)} & Actual 365 Fixed \\ \hline
+    \emph{A364, Actual/364, ACT/364}& Actual 364  \\ \hline
     \emph{T360, 30/360, 30/360 (Bond Basis), ACT/nACT} & Thirty 360 (US) \\ \hline
     \emph{30E/360, 30E/360 (Eurobond Basis)} & Thirty 360 (European) \\ \hline
     \emph{30/360 (Italian)} & Thirty 360 (Italian) \\ \hline
