added equityswapdata to leg data description

--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -2,8 +2,8 @@
 \label{ss:leg_data}
 
 The \lstinline!LegData! trade component node is used within the
-\lstinline!CapFloorData!,  \lstinline!SwapData! and
-\lstinline!SwaptionData! trade data containers. It contains a
+\lstinline!CapFloorData!,  \lstinline!SwapData! ,
+\lstinline!SwaptionData! and \lstinline!EquitySwapData! trade data containers. It contains a
 \lstinline!ScheduleData! trade component sub-node, and a sub-node that depends on
 the value of the \lstinline!LegType! element, e.g.:  \lstinline!FixedLegData! for \lstinline!LegType! \emph{Fixed} or \lstinline!FloatingLegData! for \lstinline!LegType! \emph{Floating}. The
 \lstinline!LegData! node also includes a \lstinline!Notionals!
