change from interpolation to interpolated

--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -30,9 +30,9 @@ Allowable values:  Any positive real number.
 
 Allowable values: An integer followed by \emph{D}, \emph{W}, \emph{M} or \emph{Y}. Interpolation lags are typically expressed in \emph{M}, months.
 
-\item Interpolation: A flag indicating whether interpolation should be applied to inflation fixings. 
+\item Interpolated: A flag indicating whether interpolation should be applied to inflation fixings. 
 
-Allowable values:  \emph{Linear, Flat, AsIndex} 
+Allowable values:  \emph{true,false} 
 
 \medskip
 The latter choice means that the underlying inflation index
