change from interpolation to interpolated

--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -99,7 +99,7 @@ Whether the leg cotains a final redemption flow at all or not depends on the
           <BaseCPI>210</BaseCPI>
           <StartDate>2016-07-18</StartDate>
           <ObservationLag>2M</ObservationLag>
-          <Interpolation>Linear</Interpolation>
+          <Interpolated>true</Interpolated>
           <Caps>
              <Cap>0.03</Cap>
           </Caps>
