--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -30,9 +30,9 @@ Allowable values:  Any positive real number.
 
 Allowable values: An integer followed by \emph{D}, \emph{W}, \emph{M} or \emph{Y}. Interpolation lags are typically expressed in \emph{M}, months.
 
-\item Interpolated: A flag indicating whether interpolation should be applied to inflation fixings. 
+\item Interpolation: A flag indicating whether interpolation should be applied to inflation fixings.
 
-Allowable values:  \emph{true,false} 
+Allowable values:  \emph{Linear, Flat, AsIndex} 
 
 \medskip
 The latter choice means that the underlying inflation index
@@ -99,7 +99,7 @@ Whether the leg cotains a final redemption flow at all or not depends on the
           <BaseCPI>210</BaseCPI>
           <StartDate>2016-07-18</StartDate>
           <ObservationLag>2M</ObservationLag>
-          <Interpolated>true</Interpolated>
+          <Interpolation>Linear</Interpolation>
           <Caps>
              <Cap>0.03</Cap>
           </Caps>
