--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4567,7 +4567,21 @@ the form "Ccy1Ccy2".
 \subsubsection{Securities}
 
 Listing \ref{lst:security_configuration} shows the configuration of the Securities. Each Security name is associated with
-a SpreadQuote and a RecoveryRateQuote.
+
+\begin{itemize}
+\item a mandatory SpreadQuote
+\item an optional RecoveryRateQuote. Usually a pricer will fall back on the recovery rate associated to the credit curve
+  involved in the pricing if no security specific recovery rate is given. If no credit curve is given either, a zero
+  recovery rate will be assumed.
+\item an optional PriceQuote. If the bond spread imply analytics is available, this is used to imply a SpreadQuote to
+  match a given bond price. Notice that if a SpreadQuote is given explicitly in the market data, this will override an
+  implied spread.
+\item an optional CPRQuote. This is only used by specific instruments (e.g. Balance Guaranteed Swaps).
+\end{itemize}
+
+If no configuration is given for a security, in general a pricer will assume as zero spread and recovery rate. Notice
+that in this case the spread and recovery will not be simulated and therefore also be excluded from the sensitvitiy and
+stress analysis.
 
 \begin{longlisting}
 %\hrule\medskip
@@ -4578,6 +4592,8 @@ a SpreadQuote and a RecoveryRateQuote.
     <CurveDescription>Security</CurveDescription>
     <SpreadQuote>BOND/YIELD_SPREAD/SECURITY_1</SpreadQuote>
     <RecoveryRateQuote>RECOVERY_RATE/RATE/SECURITY_1</RecoveryRateQuote>
+    <PriceQuote>BOND/PRICE/SECURITY_1</PriceQuote>
+    <CPRQuote>CPR/RATE/SECURITY_1</CPRQuote>
   </Security>
 </Securities>
 \end{minted}
