--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -39,17 +39,16 @@
     \emph{JP, JPN, JPY, TKB} & Japan Calendar \\ \hline
     \emph{CH, CHE, CHF, ZUB} & Switzerland Calendar \\ \hline
     \emph{GB, GBR, GBP, LNB, UK} & UK Calendar \\ \hline
-    \emph{London stock exchange} & London Stock Exchange Calendar \\ \hline
     \emph{US, USA, USD, NYB} & US Calendar \\ \hline
     \emph{US-SET} & US Settlement Calendar \\ \hline
     \emph{US-GOV} & US Government Bond Calendar \\ \hline    
     \emph{US-NYSE, New York stock exchange} & US NYSE Calendar \\ \hline
     \emph{US with Libor impact} & US Calendar for Libor fixings \\ \hline
     \emph{US-NERC} & US NERC Calendar \\ \hline  
+    \emph{AR, ARG, ARS} & Argentina Calendar \\ \hline    
     \emph{AU, AUD, AUS} & Australia Calendar \\ \hline
-    \emph{ZA, ZAF, ZAR, SA} & South Africa Calendar \\ \hline
-    \emph{SE, SWE, SEK, SS} & Sweden Calendar \\ \hline
-    \emph{AR, ARG, ARS} & Argentina Calendar \\ \hline
+    \emph{AT, AUT, ATS} & Austria Calendar \\ \hline    
+    \emph{BE, BEL, BEF} & Belgium Calendar \\ \hline    
     \emph{BW, BWA, BWP} & Botswana Calendar \\ \hline
     \emph{BR, BRA, BRL} & Brazil Calendar \\ \hline
     \emph{CL, CHL, CLP} & Chile Calendar \\ \hline
@@ -67,7 +66,8 @@
     \emph{ID, IDN, IDR} & Indonesia Calendar \\ \hline
     \emph{IL, ISR, ILS} & Israel Calendar \\ \hline
     \emph{Telbor} & Tel Aviv Inter-Bank Offered Rate Calendar \\ \hline
-    \emph{IT, ITA} & Italy Calendar \\ \hline
+    \emph{IT, ITA, ITL} & Italy Calendar \\ \hline
+    \emph{LU, LUX, LUF} & Luxembourg Calendar \\ \hline    
     \emph{MX, MEX, MXN} & Mexico Calendar \\ \hline
     \emph{MY, MYS, MYR} & Malaysia Calendar \\ \hline
     \emph{NL, NLD, NZD} & New Zealand Calendar\\ \hline
@@ -79,15 +79,14 @@
     \emph{RU, RUS, RUB} & Russia Calendar \\ \hline
     \emph{SAU, SAR} & Saudi Arabia \\ \hline
     \emph{SG, SGP, SGD} & Singapore Calendar \\ \hline
+    \emph{ZA, ZAF, ZAR, SA} & South Africa Calendar \\ \hline    
     \emph{KR, KOR, KRW} & South Korea Calendar \\ \hline
+    \emph{ES, ESP} & Spain Calendar \\ \hline
+    \emph{SE, SWE, SEK, SS} & Sweden Calendar \\ \hline        
     \emph{TW, TWN, TWD} & Taiwan Calendar \\ \hline
     \emph{TH, THA, THB} & Thailand Calendar \\ \hline
     \emph{TR, TUR, TRY} & Turkey Calendar \\ \hline
     \emph{UA, UKR, UAH} & Ukraine Calendar \\ \hline
-    \emph{BE, BEL, BEF, BEBR} & Belgium Calendar \\ \hline
-    \emph{LU, LUX, LUF} & Luxembourg Calendar \\ \hline
-    \emph{ES, ESP} & Spain Calendar \\ \hline
-    \emph{AT, AUT, ATS} & Austria Calendar \\ \hline
     \emph{BVMF} & Brazil Bovespa Calendar \\ \hline
     \emph{XTSE} & Canada Toronto Stock Exchange Calendar \\ \hline
     \emph{XSHG} & China Shanghai Stock Exchange Calendar \\ \hline
