--- a/Docs/UserGuide/tradedata/swap.tex
+++ b/Docs/UserGuide/tradedata/swap.tex
@@ -5,7 +5,11 @@ and can have an unlimited number of legs. Each leg is represented by a \lstinlin
 described in section \ref{ss:leg_data}. An example structure of a two-legged \lstinline!SwapData!
 node is shown in Listing \ref{lst:swap_data}.
 \begin{itemize}
-\item Settlement [Optional]: Delivery type.  Note that Non-Deliverable Cross Currency can be represented by \emph{Cash} settlement. Delivery type does not impact pricing in ORE.  
+\item Settlement [Optional]: Delivery type applicable to cross currency swaps, and ignored for all other swap types. Delivery type does not impact pricing in ORE.  
+
+Settlement \emph{Cash} indicates that principal exchanges on the cross currency swap should be included in Initial Margin (IM). According to ISDA non-deliverable (\emph{Cash}) trades are excluded from the exemption from IM for the principal exchange, i.e. the principal exchanges are included in IM. 
+
+Settlement \emph{Physical} indicates that principal exchanges on the cross currency swap should be excluded in IM (the ISDA exemption applies).  
 
 Allowable values: \emph{Cash} or \emph{Physical}.  Defaults to \emph{Physical} if left blank or omitted.
 \end{itemize}
@@ -14,7 +18,7 @@ Allowable values: \emph{Cash} or \emph{Physical}.  Defaults to \emph{Physical} i
 %\hrule\medskip
 \begin{minted}[fontsize=\footnotesize]{xml}
 <SwapData>
-  <Deliverable>false</Deliverable>
+  <Settlement>Cash</Settlement>
   <LegData>
     ...
   </LegData>
