--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4799,6 +4799,7 @@ This node is used only if \lstinline!DontThrow! is \lstinline!true!. The meaning
 
 \end{itemize}
 
+\include{referencedata}
 
 %--------------------------------------------------------
 %\subsection{Conventions: {\tt conventions.xml}}
