--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -30,6 +30,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityOption
 	that the equity option type allows for \emph{European} and \emph{American} option style.	
 	\item Name: The identifier of the underlying equity or equity index. \\
 	Allowable values:  See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
+	\item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
 	\item Currency: The currency of the equity option. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The option strike price.\\
