--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4839,6 +4839,7 @@ This node is used only if \lstinline!DontThrow! is \lstinline!true!. The meaning
 \input{../../Docs/UserGuide/tradecomponents/yyleg}
 \input{../../Docs/UserGuide/tradecomponents/zerocouponleg}
 \input{../../Docs/UserGuide/tradecomponents/cdsreferenceinformation}
+\input{../../Docs/UserGuide/tradecomponents/underlying}
 
 
 \include{allowablevalues}
