Clean up existing doc here. No change in what description.

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -311,3 +311,20 @@ conguration). \\ Typically a RED-code with the \emph{RED:} prefix \\  Examples: 
   \caption{Allowable values for \lstinline!DocClause!}
   \label{tab:docclause_data}
 \end{table}
+
+\begin{table}[H]
+\centering
+  \begin{tabu} to 0.9\linewidth {| X[1,l,m] | X[1,l,m] |}
+    \hline
+    \multicolumn{2}{|l|}{Boolean nodes} \\
+    \hline
+    \textbf{Node Value} & \textbf{Evaluates To} \\
+    \hline
+    \lstinline!Y!, \lstinline!YES!, \lstinline!TRUE!, \lstinline!true!, \lstinline!1! & \lstinline!true! \\
+    \hline
+    \lstinline!N!, \lstinline!NO!, \lstinline!FALSE!, \lstinline!false!, \lstinline!0! & \lstinline!false! \\
+    \hline
+  \end{tabu}
+  \caption{Allowable values for boolean node}
+  \label{tab:boolean_allowable}
+\end{table}
