default notional reset flag to true instead of false

--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -19,7 +19,7 @@ Allowable values: See \lstinline!Name! for equity trades in Table \ref{tab:equit
 
 Allowable values: Any positive real number
 
-\item NotionalReset [Optional]: Defaults to \emph{false}.  Notional resets only affect the equity leg.
+\item NotionalReset [Optional]: Defaults to \emph{true}.  Notional resets only affect the equity leg.
 If NotionalReset is set to \emph{true} the quantity q or number of shares of the underlying equity  is fixed for all the coupons on the equity leg, as per:
 
 q = (InitialNotional) / (InitialPrice of the Equity)
