added references to boolean node, clarified cdo qualifier field

--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -45,7 +45,7 @@ interpolation is applied.
 Final notional payment if \emph{true}: $N \,(I(T)/I_0-1)$. \\ 
 Final notional payment if  \emph{false}: $N \,I(T)/I_0$ 
 
-Allowable values:  \emph{true, false} 
+Allowable values: Boolean node, allowing \emph{Y, N, 1, 0, true, false} etc. The full set of allowable values is given in Table \ref{tab:boolean_allowable}.
 \\Defaults to \emph{false}  if left blank or omitted.
 
 \item Caps [Optional]: This node contains child elements of type
