--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -5,13 +5,8 @@ Listing \ref{lst:equitylegdata} shows an example of a leg of type Equity. The Eq
 elements:
 
 \begin{itemize}
-\item Quantity: The number of shares. Optional. If given, no notional must be specified on the equity leg. If not given,
-  a notional must be specified and the quantity is computed from the initial notional of the leg as
-
-  quantity = initial notional / (initial price * initial FX conversion rate)
-
-  where the initial price is the share price on the first valuation date and the fx rate is conversion rate from the equity
-  currency to the leg currency on the first valuation date (if applicable).
+\item Quantity: The number of shares. Optional. Either a notional or the quantity must be given for the leg, but not
+  both at the same time.
 
   Allowable values: Any positive real number
 
@@ -20,7 +15,7 @@ elements:
 Allowable values:  \emph{Price} or  \emph{Total}
 
 \item Name: The identifier of the underlying equity or equity index.
- 
+
 Allowable values: See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 
 \item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
@@ -35,13 +30,19 @@ Allowable values: Any positive real number
 
   notional = quantity x share price at valuation date for period x FX conversion rate at valuation date for period
 
+  Notice that either a) the Quantity or b) a Notional and an explicit InitialPrice must be given in the leg data for a
+  resettable leg. In the latter case the Quantity is computed as
+
+  Quantity = Notional / IntitalPrice
+
+  No FX conversion is allowed if the Quantity has to be derived from the Notional and the InitialPrice.
+
   If NotionalReset is set to \emph{false} the quantity of the underlying equity varies per period, and instead the
-  notional is taken to be the notional specified in the leg or - if a quantity is given - to be
+  notional is taken to be the notional specified in the leg or - if the quantity is given - to be
 
-  quantity x initial price x initial FX conversion rate
+  Quantity x InitialPrice
 
-  where initial price and inital FX conversion rate are the share price and FX conversion rate (if applicable) at the
-  first valuation date of the leg.
+  where again the InitialPrice must be explicitly given in the leg data and no FX conversion is allowed in this case.
 
   Allowable values:  \emph{true} or  \emph{false}
 
@@ -66,7 +67,7 @@ Allowable values: A node on the same form as \lstinline!ScheduleData!, (see \ref
 \item FXIndexCalendar [Optional]: Calendar for FX Index.
 
 %Allowable values:  Any positive real number.
-\end{itemize} 
+\end{itemize}
 
 \begin{listing}[H]
 %\hrule\medskip
